<resources>
    <string name="app_name">LRFSF</string>
    <string name="fecha_para_temp_regular">Fecha: %1$d</string>
    <string name="equipo">EQUIPO</string>
    <string name="pj">PJ</string>
    <string name="pg">PG</string>
    <string name="pe">PE</string>
    <string name="pp">PP</string>
    <string name="pts">PTS</string>
    <string name="dif">DIF</string>
    <string name="local">local</string>
    <string name="ptsl">ptsL</string>
    <string name="guion">-</string>
    <string name="ptsv">ptsV</string>
    <string name="visita">visita</string>
    <string name="inferiores">Inferiores</string>
    <string name="mayores">Mayores</string>

    <string-array name="mayinf">
        <item>Mayores</item>
        <item>Inferiores</item>
    </string-array>

    <string-array name="categoriasInferiores">
        <item>Categoria</item>
        <item>General</item>
        <item>Juvenil</item>
        <item>Prejuvenil</item>
        <item>Infantil</item>
        <item>Preinfantil</item>
        <item>Promocional</item>
    </string-array>

    <string-array name="categoriasMayores">
        <item>Categoria</item>
        <item>Primera</item>
        <item>Reserva</item>
    </string-array>

    <string-array name="categorias">
        <item>Categoria</item>
        <item>Primera</item>
        <item>Reserva</item>
        <item>Juvenil</item>
        <item>Prejuvenil</item>
        <item>Infantil</item>
        <item>Preinfantil</item>
        <item>Promocional</item>
    </string-array>

    <string-array name="zonas">
        <item>Zona</item>
        <item>Norte</item>
        <item>Noroeste</item>
        <item>Sur</item>
        <item>Oeste</item>
        <item>Centro</item>
    </string-array>

    <string-array name="zonasCampeones">
        <item>Zona</item>
        <item>Norte</item>
        <item>Noroeste</item>
        <item>Sur</item>
        <item>Oeste</item>
        <item>Centro</item>
        <item>Absoluto</item>
    </string-array>

    <string-array name="torneosMayores">
        <item>Torneo</item>
        <item>Apertura</item>
        <item>Clausura</item>
        <item>General</item>
    </string-array>

    <string-array name="torneosMenores">
        <item>Torneo</item>
        <item>Apertura</item>
        <item>Clausura</item>
    </string-array>
</resources>