<?xml version="1.0" encoding="utf-8"?>
<TableRow
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/black2"
    android:paddingTop="3sp"
    android:paddingBottom="3sp">

    <TextView
        android:id="@+id/colEquipoL"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/local"
        android:gravity="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/colGolesL"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:text="@string/ptsl"
        android:gravity="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/colEstado"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:text="@string/guion"
        android:gravity="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/colGolesV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.7"
        android:text="@string/ptsv"
        android:gravity="center"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/colEquipoV"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/visita"
        android:gravity="center"
        android:textColor="#FFFFFF" />
</TableRow>